# Pro-URL-shortner

./: LICENSE  README.md  dependencies.py  main.py  pyproject.toml
api/routes/: url.py
core/: config.py  redis.py
db/: models.py  session.py
schemas/: url_schemas.py
services/: url_service.py
templates/: index.html
utils/: base62.py
